# corastuff

./: .gitignore  AGENTS.md  RUN_AS_SERVICE.md  TODO.md  failed.txt  kaufland_debug.html  learnings.md  pyproject.toml  requirements.txt  run_codex_loop.sh  run_codex_prompt_n_times.sh  serve.sh
new/: .dockerignore  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
new/convex/: README.md  admin.ts  adminActions.ts  amazon.ts  auth.ts  authActions.ts  authz.ts  automationActions.ts  canonicals.ts  dashboard.ts  insights.ts  links.ts  prices.ts  products.ts  runArtifacts.ts  runs.ts  runsActions.ts  schedules.ts  schedulesActions.ts  schema.ts  scraperBuilder.ts  scraperBuilderActions.ts  scraperBuilderDrafts.ts  settings.ts  sources.ts  sourcesActions.ts
src/: cli.py  db.py  job_queue.py  models.py  scheduler.py  scraper_builder.py  scraper_builder_runner.py  utils.py  worker.py
tests/: test_artzt_live.py  test_bike24_live.py  test_bodyguard_shop_live.py  test_cardiofitness_live.py  test_decathlon_live.py  test_dein_vital_shop_live.py  test_digitec_live.py  test_fitshop_live.py  test_globetrotter_live.py  test_intersport_live.py  test_job_queue_concurrency_limit.py  test_keller_sports_live.py  test_kuebler_sport_live.py  test_manor_live.py  test_medidor_live.py  test_migros_live.py  test_oezpinar_live.py  test_otto_live.py  test_sanicare_live.py  test_scraper_registry.py  test_seeger24_live.py  test_sport2000_live.py  test_sport_bittl_live.py  test_sport_conrad_live.py  test_tennis_point_live.py  test_transa_live.py  test_upswing_live.py
(+166 files in other folders)
