[project]
name = "corastuff"
version = "0.1.0"
description = "Web scraper for product data with product linking webapp"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "httpx>=0.28.0",
    "playwright>=1.49.0",
    "playwright-stealth>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.30.0",
]

[project.scripts]
corastuff = "src.cli:main"
corastuff-web = "src.webapp.run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
